# iris-prediction

./: .gitignore  404.html  compose.yaml  config.json  index.html
.github/workflows/: ci.yaml
api/: index.html
backend/: Dockerfile  pyproject.toml
backend/app/: app.py
backend/logs/: logger.py
backend/ml/: train.py
backend/tests/: test_api.py
docs/: mkdocs.yml  pyproject.toml
docs/docs/: api.md  index.md
frontend/: Dockerfile  app.py  pyproject.toml
search/: search_index.json
