[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azureml-mlflow>=1.60.0",
    "fastapi[standard]>=0.121.2",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
useLibraryCodeForTypes = true
